style: fix spacing on work experience inputs

--- a/src/App.css
+++ b/src/App.css
@@ -10,13 +10,13 @@
   padding: 10px;
   padding-bottom: 3px;
   margin-bottom: 10px;
+  font-size: 1.2rem;
 }
 .eduContainer {
   grid-auto-rows: 0;
 }
 .jobContainer {
-  grid-template-rows: repeat(4, 1fr);
-  row-gap: 0px;
+  grid-template-rows: repeat(4, auto);
 }
 .inputContainer {
   display: flex;
